@@ -1,372 +1,0 @@
-/* include/nsconfig.h.in.  Generated from configure.in by autoheader.  */
-
-/* Define if you have support for BSD4.4 style msg passing. */
-#undef HAVE_CMMSG
-
-/* Define to 1 if the native crypt library should be used */
-#undef HAVE_CRYPT
-
-/* Define to 1 if you have the declaration of `tzname', and to 0 if you don't.
-   */
-#undef HAVE_DECL_TZNAME
-
-/* Define to 1 if you have the `drand48' function. */
-#undef HAVE_DRAND48
-
-/* Define to 1 if you have the `fork1' function. */
-#undef HAVE_FORK1
-
-/* Define to 1 if you have the `getaddrinfo' function. */
-#undef HAVE_GETADDRINFO
-
-/* Define to 1 if gethostbyaddr_r is available. */
-#undef HAVE_GETHOSTBYADDR_R
-
-/* Define to 1 if gethostbyaddr_r takes 7 args. */
-#undef HAVE_GETHOSTBYADDR_R_7
-
-/* Define to 1 if gethostbyname_r is available. */
-#undef HAVE_GETHOSTBYNAME_R
-
-/* Define to 1 if gethostbyname_r takes 3 args. */
-#undef HAVE_GETHOSTBYNAME_R_3
-
-/* Define to 1 if gethostbyname_r takes 5 args. */
-#undef HAVE_GETHOSTBYNAME_R_5
-
-/* Define to 1 if gethostbyname_r takes 6 args. */
-#undef HAVE_GETHOSTBYNAME_R_6
-
-/* Define to 1 if you have the `getnameinfo' function. */
-#undef HAVE_GETNAMEINFO
-
-/* Define to 1 if you have the `gmtime_r' function. */
-#undef HAVE_GMTIME_R
-
-/* Define to 1 if you have the `inet_ntop' function. */
-#undef HAVE_INET_NTOP
-
-/* Define to 1 if the system has the type `intmax_t'. */
-#undef HAVE_INTMAX_T
-
-/* Define to 1 if the system has the type `intptr_t'. */
-#undef HAVE_INTPTR_T
-
-/* Define to 1 if you have the <inttypes.h> header file. */
-#undef HAVE_INTTYPES_H
-
-/* Define to 1 if you have the `socket' library (-lsocket). */
-#undef HAVE_LIBSOCKET
-
-/* Define to 1 if you have the `z' library (-lz). */
-#undef HAVE_LIBZ
-
-/* Do we have <limits.h>? */
-#undef HAVE_LIMITS_H
-
-/* Define to 1 if you have the `localtime_r' function. */
-#undef HAVE_LOCALTIME_R
-
-/* Define to 1 if the system has the type `long long int'. */
-#undef HAVE_LONG_LONG_INT
-
-/* Define to 1 if you have the `lseek64' function. */
-#undef HAVE_LSEEK64
-
-/* Define to 1 if you have the <memory.h> header file. */
-#undef HAVE_MEMORY_H
-
-/* Define to 1 if DNS calls are MT-safe */
-#undef HAVE_MTSAFE_DNS
-
-/* Do we have <net/errno.h>? */
-#undef HAVE_NET_ERRNO_H
-
-/* Define to 1 if you have the `open64' function. */
-#undef HAVE_OPEN64
-
-/* Define to 1 if you have the `poll' function. */
-#undef HAVE_POLL
-
-/* Define to 1 if you have the `random' function. */
-#undef HAVE_RANDOM
-
-/* Define to 1 if you have the <stdint.h> header file. */
-#undef HAVE_STDINT_H
-
-/* Define to 1 if you have the <stdlib.h> header file. */
-#undef HAVE_STDLIB_H
-
-/* Define to 1 if you have the <strings.h> header file. */
-#undef HAVE_STRINGS_H
-
-/* Define to 1 if you have the <string.h> header file. */
-#undef HAVE_STRING_H
-
-/* Is 'struct dirent64' in <sys/types.h>? */
-#undef HAVE_STRUCT_DIRENT64
-
-/* Define to 1 if `sin_len' is member of `struct sockaddr_in'. */
-#undef HAVE_STRUCT_SOCKADDR_IN_SIN_LEN
-
-/* Is 'struct stat64' in <sys/stat.h>? */
-#undef HAVE_STRUCT_STAT64
-
-/* Define to 1 if `tm_zone' is member of `struct tm'. */
-#undef HAVE_STRUCT_TM_TM_ZONE
-
-/* Define to 1 if you have the <sys/param.h> header file. */
-#undef HAVE_SYS_PARAM_H
-
-/* Define to 1 if you have the <sys/stat.h> header file. */
-#undef HAVE_SYS_STAT_H
-
-/* Define to 1 if you have the <sys/time.h> header file. */
-#undef HAVE_SYS_TIME_H
-
-/* Define to 1 if you have the <sys/types.h> header file. */
-#undef HAVE_SYS_TYPES_H
-
-/* Define to 1 if you have the <sys/uio.h> header file. */
-#undef HAVE_SYS_UIO_H
-
-/* Define to 1 if Tcl exports the Tcl_GetMemoryInfo function. */
-#undef HAVE_TCL_GETMEMORYINFO
-
-/* Define to 1 if you have the `timegm' function. */
-#undef HAVE_TIMEGM
-
-/* Should we use the global timezone variable? */
-#undef HAVE_TIMEZONE_VAR
-
-/* Should we use the tm_gmtoff field of struct tm? */
-#undef HAVE_TM_GMTOFF
-
-/* Should we use the tm_tzadj field of struct tm? */
-#undef HAVE_TM_TZADJ
-
-/* Define to 1 if your `struct tm' has `tm_zone'. Deprecated, use
-   `HAVE_STRUCT_TM_TM_ZONE' instead. */
-#undef HAVE_TM_ZONE
-
-/* Is off64_t in <sys/types.h>? */
-#undef HAVE_TYPE_OFF64_T
-
-/* Define to 1 if you don't have `tm_zone' but do have the external array
-   `tzname'. */
-#undef HAVE_TZNAME
-
-/* Define to 1 if the system has the type `uintmax_t'. */
-#undef HAVE_UINTMAX_T
-
-/* Define to 1 if the system has the type `uintptr_t'. */
-#undef HAVE_UINTPTR_T
-
-/* Define to 1 if you have the <uio.h> header file. */
-#undef HAVE_UIO_H
-
-/* Define to 1 if you have the <unistd.h> header file. */
-#undef HAVE_UNISTD_H
-
-/* Define to 1 if you have the `unsetenv' function. */
-#undef HAVE_UNSETENV
-
-/* Define to 1 if the system has the type `unsigned long long int'. */
-#undef HAVE_UNSIGNED_LONG_LONG_INT
-
-/* Define to 1 if you have the <zlib.h> header file. */
-#undef HAVE_ZLIB_H
-
-/* Define to 1 if you have the `_NSGetEnviron' function. */
-#undef HAVE__NSGETENVIRON
-
-/* Do we have <dirent.h>? */
-#undef NO_DIRENT_H
-
-/* Do we have <dlfcn.h>? */
-#undef NO_DLFCN_H
-
-/* Do we have <errno.h>? */
-#undef NO_ERRNO_H
-
-/* Do we have <float.h>? */
-#undef NO_FLOAT_H
-
-/* Do we have <limits.h>? */
-#undef NO_LIMITS_H
-
-/* Do we have <stdlib.h>? */
-#undef NO_STDLIB_H
-
-/* Do we have <string.h>? */
-#undef NO_STRING_H
-
-/* Do we have <sys/wait.h>? */
-#undef NO_SYS_WAIT_H
-
-/* Do we have <values.h>? */
-#undef NO_VALUES_H
-
-/* Name of package */
-#undef PACKAGE
-
-/* Define to the address where bug reports for this package should be sent. */
-#undef PACKAGE_BUGREPORT
-
-/* Define to the full name of this package. */
-#undef PACKAGE_NAME
-
-/* Define to the full name and version of this package. */
-#undef PACKAGE_STRING
-
-/* Define to the one symbol short name of this package. */
-#undef PACKAGE_TARNAME
-
-/* Define to the version of this package. */
-#undef PACKAGE_VERSION
-
-/* Is this a static build? */
-#undef STATIC_BUILD
-
-/* Define to 1 if you have the ANSI C header files. */
-#undef STDC_HEADERS
-
-/* Is memory debugging enabled? */
-#undef TCL_MEM_DEBUG
-
-/* Are we building with threads enabled? */
-#undef TCL_THREADS
-
-/* Are wide integers to be implemented with C 'long's? */
-#undef TCL_WIDE_INT_IS_LONG
-
-/* What type should be used to define wide integers? */
-#undef TCL_WIDE_INT_TYPE
-
-/* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
-#undef TIME_WITH_SYS_TIME
-
-/* Define to 1 if your <sys/time.h> declares `struct tm'. */
-#undef TM_IN_SYS_TIME
-
-/* UNDER_CE version */
-#undef UNDER_CE
-
-/* Do we need a special AIX hack for timezones? */
-#undef USE_DELTA_FOR_TZ
-
-/* Define to 1 if the <dl.h> header should be used. */
-#undef USE_DLSHL
-
-/* need for dup high */
-#undef USE_DUPHIGH
-
-/* Define to 1 if the <mach-o/dyld.h> header should be used. */
-#undef USE_DYLD
-
-/* Use TCL VFS */
-#undef USE_TCLVFS
-
-/* Do we want to use the threaded memory allocator? */
-#undef USE_THREAD_ALLOC
-
-/* Version number of package */
-#undef VERSION
-
-/* Define WORDS_BIGENDIAN to 1 if your processor stores words with the most
-   significant byte first (like Motorola and SPARC, unlike Intel and VAX). */
-#if defined __BIG_ENDIAN__
-# define WORDS_BIGENDIAN 1
-#elif ! defined __LITTLE_ENDIAN__
-# undef WORDS_BIGENDIAN
-#endif
-
-/* Add the _ISOC99_SOURCE flag when building */
-#undef _ISOC99_SOURCE
-
-/* Add the _LARGEFILE64_SOURCE flag when building */
-#undef _LARGEFILE64_SOURCE
-
-/* Add the _LARGEFILE_SOURCE64 flag when building */
-#undef _LARGEFILE_SOURCE64
-
-/* # needed in sys/socket.h Should OS/390 do the right thing with sockets? */
-#undef _OE_SOCKETS
-
-/* Do we really want to follow the standard? Yes we do! */
-#undef _POSIX_PTHREAD_SEMANTICS
-
-/* Do we want the reentrant OS API? */
-#undef _REENTRANT
-
-/* Do we want the thread-safe OS API? */
-#undef _THREAD_SAFE
-
-/* Define for Solaris 2.5.1 so the uint32_t typedef from <sys/synch.h>,
-   <pthread.h>, or <semaphore.h> is not used. If the typedef were allowed, the
-   #define below would cause a syntax error. */
-#undef _UINT32_T
-
-/* Define for Solaris 2.5.1 so the uint64_t typedef from <sys/synch.h>,
-   <pthread.h>, or <semaphore.h> is not used. If the typedef were allowed, the
-   #define below would cause a syntax error. */
-#undef _UINT64_T
-
-/* Define for Solaris 2.5.1 so the uint8_t typedef from <sys/synch.h>,
-   <pthread.h>, or <semaphore.h> is not used. If the typedef were allowed, the
-   #define below would cause a syntax error. */
-#undef _UINT8_T
-
-/* _WIN32_WCE version */
-#undef _WIN32_WCE
-
-/* Do we want to use the XOPEN network library? */
-#undef _XOPEN_SOURCE_EXTENDED
-
-/* Define to the type of a signed integer type of width exactly 16 bits if
-   such a type exists and the standard includes do not define it. */
-#undef int16_t
-
-/* Define to the type of a signed integer type of width exactly 32 bits if
-   such a type exists and the standard includes do not define it. */
-#undef int32_t
-
-/* Define to the type of a signed integer type of width exactly 64 bits if
-   such a type exists and the standard includes do not define it. */
-#undef int64_t
-
-/* Define to the type of a signed integer type of width exactly 8 bits if such
-   a type exists and the standard includes do not define it. */
-#undef int8_t
-
-/* Define to the widest signed integer type if <stdint.h> and <inttypes.h> do
-   not define. */
-#undef intmax_t
-
-/* Define to the type of a signed integer type wide enough to hold a pointer,
-   if such a type exists, and if the system does not define it. */
-#undef intptr_t
-
-/* Define to the type of an unsigned integer type of width exactly 16 bits if
-   such a type exists and the standard includes do not define it. */
-#undef uint16_t
-
-/* Define to the type of an unsigned integer type of width exactly 32 bits if
-   such a type exists and the standard includes do not define it. */
-#undef uint32_t
-
-/* Define to the type of an unsigned integer type of width exactly 64 bits if
-   such a type exists and the standard includes do not define it. */
-#undef uint64_t
-
-/* Define to the type of an unsigned integer type of width exactly 8 bits if
-   such a type exists and the standard includes do not define it. */
-#undef uint8_t
-
-/* Define to the widest unsigned integer type if <stdint.h> and <inttypes.h>
-   do not define. */
-#undef uintmax_t
-
-/* Define to the type of an unsigned integer type wide enough to hold a
-   pointer, if such a type exists, and if the system does not define it. */
-#undef uintptr_t
