@@ -1,3 +1,7 @@
+2008-08-27  Stephen Deasey <sdeasey@users.sf.net>
+
+	* include/nsconfig.h.in: Remove autogenerated file.
+
 2008-08-27  Vlad Seryakov <seryakov@users.sf.net>
 
         * nsdb/nsdb.h:
